# cobiwm

./: .autotools  .cproject  .project  Makefile.am  NEWS  configure.ac
data/: 50-cobiwm-navigation.xml.in  50-cobiwm-system.xml.in  50-cobiwm-windows.xml.in  Makefile.am  cobiwm.desktop.in  org.cobiwm.gschema.xml.in.in  org.cobiwm.keybindings.gschema.xml.in.in  org.cobiwm.wayland.gschema.xml.in.in
doc/: code-overview.txt  compositor-control.txt  how-constraints-works.txt  how-to-get-focus-right.txt  strut-and-related-updating.txt
doc/man/: Makefile.am  cobiwm.1
po/: ChangeLog  POTFILES.in  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  ha.po  he.po  hi.po  hr.po  hu.po  (+57 more)
src/: Makefile.am  cobiwm-enum-types.c.in  cobiwm-enum-types.h.in  libcobiwm.pc.in  org.Cobiwm.DisplayConfig.xml  org.Cobiwm.IdleMonitor.xml
src/backends/: cobiwm-backend-private.h  cobiwm-backend.c  cobiwm-barrier-private.h  cobiwm-barrier.c  cobiwm-cursor-renderer.c  cobiwm-cursor-renderer.h  cobiwm-cursor-tracker-private.h  cobiwm-cursor-tracker.c  cobiwm-cursor.c  cobiwm-cursor.h  cobiwm-display-config-shared.h  cobiwm-idle-monitor-dbus.c  cobiwm-idle-monitor-dbus.h  cobiwm-idle-monitor-private.h  cobiwm-idle-monitor.c  cobiwm-monitor-config.c  cobiwm-monitor-config.h  cobiwm-monitor-manager-dummy.c  cobiwm-monitor-manager-dummy.h  cobiwm-monitor-manager-private.h  cobiwm-monitor-manager.c  cobiwm-pointer-constraint.c  cobiwm-pointer-constraint.h  cobiwm-stage.c  cobiwm-stage.h
src/backends/native/: cobiwm-backend-native-private.h  cobiwm-backend-native.c  cobiwm-backend-native.h  cobiwm-barrier-native.c  cobiwm-barrier-native.h  cobiwm-cursor-renderer-native.c  cobiwm-cursor-renderer-native.h  cobiwm-idle-monitor-native.c  cobiwm-idle-monitor-native.h  cobiwm-launcher.c  cobiwm-launcher.h  cobiwm-monitor-manager-kms.c  cobiwm-monitor-manager-kms.h
src/backends/x11/: cobiwm-backend-x11.c  cobiwm-backend-x11.h  cobiwm-barrier-x11.c  cobiwm-barrier-x11.h  cobiwm-cursor-renderer-x11.c  cobiwm-cursor-renderer-x11.h  cobiwm-idle-monitor-xsync.c  cobiwm-idle-monitor-xsync.h  cobiwm-monitor-manager-xrandr.c  cobiwm-monitor-manager-xrandr.h
src/backends/x11/nested/: cobiwm-cursor-renderer-x11-nested.c  cobiwm-cursor-renderer-x11-nested.h
src/compositor/: README  clutter-utils.c  clutter-utils.h  cobiwm-background-actor-private.h  cobiwm-background-actor.c  cobiwm-background-group.c  cobiwm-background-image.c  cobiwm-background-private.h  cobiwm-background.c  cobiwm-cullable.c  cobiwm-cullable.h  cobiwm-dnd-actor-private.h  cobiwm-dnd-actor.c  cobiwm-effect-manager.c  cobiwm-effect-manager.h  cobiwm-feedback-actor-private.h  cobiwm-feedback-actor.c  cobiwm-shadow-factory.c  cobiwm-shaped-texture-private.h  cobiwm-shaped-texture.c  cobiwm-surface-actor-wayland.c  cobiwm-surface-actor-wayland.h  cobiwm-surface-actor-x11.c  cobiwm-surface-actor-x11.h  cobiwm-surface-actor.c  cobiwm-surface-actor.h  cobiwm-sync-ring.c  cobiwm-sync-ring.h  cobiwm-texture-rectangle.c  cobiwm-texture-rectangle.h  cobiwm-texture-tower.c  cobiwm-texture-tower.h  cobiwm-window-actor-private.h  cobiwm-window-actor.c  cobiwm-window-group.c  cobiwm-window-group.h  cobiwm-window-shape.c  cogl-utils.c  cogl-utils.h  compositor-private.h  (+3 more)
src/core/: bell.c  bell.h  boxes-private.h  boxes.c  cobiwm-accel-parse.c  cobiwm-accel-parse.h  cobiwm-border.c  cobiwm-border.h  cobiwm-gesture-tracker-private.h  cobiwm-gesture-tracker.c  constraints.c  constraints.h  core.c  core.h  delete.c  display-private.h  display.c  edge-resistance.c  edge-resistance.h  errors.c  events.c  events.h  frame.c  frame.h  keybindings-private.h  keybindings.c  main.c  place.c  place.h  prefs.c  restart-helper.c  restart.c  screen-private.h  screen.c  stack-tracker.c  stack-tracker.h  stack.c  stack.h  startup-notification-private.h  startup-notification.c  (+7 more)
src/include/: barrier.h  boxes.h  cobiwm-backend.h  cobiwm-background-actor.h  cobiwm-background-group.h  cobiwm-background-image.h  cobiwm-background.h  cobiwm-cursor-tracker.h  cobiwm-idle-monitor.h  cobiwm-monitor-manager.h  cobiwm-plugin.h  cobiwm-shadow-factory.h  cobiwm-shaped-texture.h  cobiwm-version.h.in  cobiwm-window-actor.h  cobiwm-window-shape.h  common.h  compositor-cobiwm.h  compositor.h  display.h  errors.h  group.h  keybindings.h  main.h  prefs.h  screen.h  theme.h  types.h  util.h  window.h  workspace.h
src/ui/: frames.c  frames.h  theme-private.h  theme.c  ui.c  ui.h
src/wayland/: cobiwm-pointer-confinement-wayland.c  cobiwm-pointer-confinement-wayland.h  cobiwm-pointer-lock-wayland.c  cobiwm-pointer-lock-wayland.h  cobiwm-wayland-buffer.c  cobiwm-wayland-buffer.h  cobiwm-wayland-data-device-private.h  cobiwm-wayland-data-device.c  cobiwm-wayland-data-device.h  cobiwm-wayland-keyboard.c  cobiwm-wayland-keyboard.h  cobiwm-wayland-outputs.c  cobiwm-wayland-outputs.h  cobiwm-wayland-pointer-constraints.c  cobiwm-wayland-pointer-constraints.h  cobiwm-wayland-pointer-gesture-pinch.c  cobiwm-wayland-pointer-gesture-pinch.h  cobiwm-wayland-pointer-gesture-swipe.c  cobiwm-wayland-pointer-gesture-swipe.h  cobiwm-wayland-pointer-gestures.c  cobiwm-wayland-pointer-gestures.h  cobiwm-wayland-pointer.c  cobiwm-wayland-pointer.h  cobiwm-wayland-popup.c  cobiwm-wayland-popup.h  cobiwm-wayland-private.h  cobiwm-wayland-region.c  cobiwm-wayland-region.h  cobiwm-wayland-seat.c  cobiwm-wayland-seat.h  cobiwm-wayland-surface.c  cobiwm-wayland-surface.h  cobiwm-wayland-touch.c  cobiwm-wayland-touch.h  cobiwm-wayland-types.h  cobiwm-wayland-versions.h  cobiwm-wayland.c  cobiwm-wayland.h  cobiwm-window-wayland.c  cobiwm-window-wayland.h  (+5 more)
src/x11/: atomnames.h  cobiwm-Xatomtype.h  events.c  events.h  group-private.h  group-props.c  group-props.h  group.c  iconcache.c  iconcache.h  session.c  session.h  window-props.c  window-props.h  window-x11-private.h  window-x11.c  window-x11.h  xprops.c  xprops.h
